FIX: users/me VALIDATION TO NOT UPGRADE PLAN ILEGALLY
