# server/docs/swagger.yaml
@@ -638,6 +638,61 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/Error500"
+    put:
+      summary: Updates the info of the user that has the username passed as parameter
+      tags:
+        - Users
+      parameters:
+        - in: path
+          name: username
+          schema:
+            type: string
+          required: true
+          description: The username of the user to update
+          example: johndoe
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/UserPut"
+      responses:
+        "200":
+          description: The info was successfully updated
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/OK2XX"
+        "400":
+          description: There was an error with the request
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error400"
+        "401":
+          description: The request was not authorized
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error401"
+        "403":
+          description: The user that made the request has not enough privileges
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error403"
+        "404":
+          description: The item was not found
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error404"
+        "500":
+          description: Some server error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error500"
   /new:
     post:
       summary: Creates a new user
